--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -9,13 +9,29 @@
 
 
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:theme="@style/ToolbarStyle"
+        android:background="@color/colorPrimary"
+        app:title="Patrol"
+        app:titleTextColor="#FFFFFF"
+        />
+
+    <View
+        android:layout_below="@id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/drop_down"/>
 
         <LinearLayout
             android:layout_below="@id/my_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/tmp_lin"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
             <android.support.v7.widget.CardView
@@ -135,13 +151,12 @@
         android:orientation="horizontal"
         >
         <Button
-            android:id="@+id/store_data"
+            android:id="@+id/btn_panic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@color/colorPrimary"
             android:clickable="true"
-            android:onClick="pressPanic"
             android:text="PANIC"
             android:textColor="#FFF"
             android:textStyle="bold"
