--- a/app/src/main/res/layout/epic_popup_positive.xml
+++ b/app/src/main/res/layout/epic_popup_positive.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:padding="30dp"
     android:gravity="center"
     android:background="#66000000">
 
@@ -22,7 +21,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:background="#eeeeee">
+
             <ImageView
                 android:id="@+id/closePopupPositiveImg"
                 android:layout_width="20dp"
@@ -34,60 +35,43 @@
                 android:layout_alignParentTop="true"
                 android:adjustViewBounds="true"
                 android:elevation="5dp"
+                android:visibility="gone"
                 />
-        </RelativeLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/titleTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="25dp">
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:padding="10dp"
+                android:textSize="25dp"
+                android:text="@string/positive_popup_title_default"/>
 
-                <TextView
-                    android:id="@+id/titleTv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:text="@string/positive_popup_title_default"/>
-
-                <ImageView
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp"
-                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
+            <ImageView
+                android:id="@+id/tmp_img_tick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/titleTv"
+                android:tint="@color/colorAccent"
+                app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
 
 
+            <Button
+                android:id="@+id/btnAccept"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/positive_popup_button_default"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_below="@id/tmp_img_tick"
+                android:textColor="@color/colorWhite"
+                android:background="@color/colorAccent"
+                android:layout_gravity="center_horizontal"
+                />
 
-                <Button
-                    android:id="@+id/btnAccept"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/positive_popup_button_default"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:textColor="@color/colorWhite"
-                    android:background="@drawable/button_green_round"
-                    android:layout_gravity="center_horizontal"
-                    />
-
-            </LinearLayout>
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
