--- a/app/src/main/res/layout/epic_popup_positive.xml
+++ b/app/src/main/res/layout/epic_popup_positive.xml
@@ -12,8 +12,9 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp"
+
         app:cardBackgroundColor="@color/colorGreenLight"
+        app:cardPreventCornerOverlap="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
