--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -115,7 +115,7 @@
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="5 Point Remaining" />
+                android:text="Points Remaining" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
