--- a/app/src/main/res/layout/duration_info.xml
+++ b/app/src/main/res/layout/duration_info.xml
@@ -7,13 +7,13 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="4dp"
         app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true"
-        android:layout_above="@+id/btn_collect">
+        android:layout_above="@+id/keyboard_ln">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"
@@ -39,7 +39,7 @@
                 android:id="@+id/ttv_start_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="55dp"
                 android:layout_marginLeft="20dp"
                 android:textColor="#000"
                 android:text="Start Time  :"
@@ -48,13 +48,13 @@
 
             <EditText
                 android:id="@+id/edt_start_time"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="55dp"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
                 android:gravity="center"
-                android:inputType="none"
-                android:focusable="false"
+
+
                 android:hint="00:00"
                 android:layout_toRightOf="@+id/ttv_start_time"
                 android:layout_height="wrap_content"
@@ -82,10 +82,10 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                android:inputType="none"
+
                 android:gravity="center"
                 android:hint="00:00"
-                android:focusable="false"
+
                 android:layout_toRightOf="@+id/ttv_start_time"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text"
@@ -100,9 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
-
                 android:layout_marginLeft="20dp"
-
                 android:textColor="#000"
                 android:text="Minimum Time  :"
                 android:textSize="18dp"
@@ -115,10 +113,8 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                android:inputType="none"
                 android:gravity="center"
                 android:hint="0"
-                android:focusable="false"
                 android:layout_toRightOf="@+id/ttv_min_time"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text"
@@ -149,10 +145,10 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                android:inputType="none"
+
                 android:gravity="center"
                 android:hint="0"
-                android:focusable="false"
+
                 android:layout_toRightOf="@+id/ttv_max_time"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text"
@@ -183,10 +179,10 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                android:inputType="none"
+
                 android:gravity="center"
                 android:hint="0"
-                android:focusable="false"
+
                 android:layout_toRightOf="@+id/ttv_max_time"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text"
@@ -218,10 +214,10 @@
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="15dp"
-                android:inputType="none"
+
                 android:gravity="center"
                 android:hint="0"
-                android:focusable="false"
+
                 android:layout_toRightOf="@+id/ttv_max_time"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edit_text"
@@ -233,6 +229,12 @@
 
     </android.support.v7.widget.CardView>
 
+    <include
+        android:id="@+id/keyboard_ln"
+        layout="@layout/keyboard"
+        android:layout_width="match_parent"
+        android:layout_height="210dp"
+        android:layout_above="@+id/btn_collect" />
 
 
     <Button
