--- a/app/src/main/res/layout/site_data_layout.xml
+++ b/app/src/main/res/layout/site_data_layout.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="center"
         android:background="@color/colorPrimaryDark"
         android:clickable="true"
-        android:text="LOAD DATA"
+        android:text="FINISH"
         android:textColor="#FFF"
         android:textStyle="bold" />
 
