--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -76,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_margin="10dp"
+                android:visibility="gone"
                 android:layout_below="@id/my_toolbar"
                 app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="4dp"
@@ -107,6 +108,13 @@
                         android:textSize="12sp"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+            <include android:id="@+id/chronometer_holder"
+                layout="@layout/chronometer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
 
             <TextView
                 android:id="@+id/view_content"
