--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,14 +89,29 @@
     </android.support.v7.widget.CardView>
 
 
-        <Button
-            android:id="@+id/btn_panic"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PANIC !!!"
             android:layout_alignParentBottom="true"
-            android:textColor="#FFF"
-            android:textStyle="bold"
-            android:background="@color/colorPrimary"/>
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btn_panic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PANIC !!!"
+                android:textColor="#FFF"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:background="@color/colorPrimary"/>
+            <Button
+                android:id="@+id/btn_supervisor_request"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Supervisor request"
+                android:textColor="#FFF"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:background="@color/colorPrimaryDark"/>
+        </LinearLayout>
 
     </RelativeLayout>
